update links to other open source projects

--- a/index.html
+++ b/index.html
@@ -139,12 +139,11 @@
 				<p>Try and edit the code on the left and watch the diagram change. Any changes are saved to the browser's <i>localStorage</i>, so your diagram should be here the next time, (but no guarantees).</p>
 				<p>Created by <a href="mailto:daniel.kallin@gmail.com">Daniel Kallin</a> and hosted on <a href="https://github.com/skanaar/nomnoml" target="_blank">GitHub</a> for your perusal.</p>
 				<p>Nomnoml was made possible by the cool projects
-				<a target="_blank" href="http://zaach.github.io/jison/">jison</a>,
-				<a target="_blank" href="https://github.com/cpettitt/dagre">dagre</a>,
-				<a target="_blank" href="https://underscorejs.org">underscore</a>,
-				<a target="_blank" href="http://typicons.com/">typicons</a> ,
-				<a target="_blank" href="https://codemirror.net/">codemirror</a> and
-				<a target="_blank" href="http://ethanschoonover.com/solarized">solarized</a>.
+				<a target="_blank" href="https://zaa.ch/jison">jison</a>,
+				<a target="_blank" href="https://github.com/dagrejs/dagre">dagre</a>,
+				<a target="_blank" href="https://www.s-ings.com/typicons">typicons</a> ,
+				<a target="_blank" href="https://codemirror.net">codemirror</a> and
+				<a target="_blank" href="https://ethanschoonover.com/solarized/">solarized</a>.
 				</p>
 
 				<hr>
