switch to CDN-delivered dependencies

--- a/index.html
+++ b/index.html
@@ -316,14 +316,14 @@
 
 [<actor>Sailor] - [<usecase>shiver me;timbers]</script>
 
-	<script src="lib/underscore.min.js"></script>
-	<script src="lib/filesaver.min.js"></script>
+	<script src="//unpkg.com/underscore@1.11.0/underscore-min.js"></script>
+	<script src="//unpkg.com/file-saver@2.0.2/dist/FileSaver.min.js"></script>
 	<script src="codemirror/codemirror-compressed.js"></script>
 	<script src="codemirror/nomnoml.codemirror-mode.js"></script>
 	<script src="dist/nomnoml.web.js"></script>
 
-	<script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-	<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+	<script crossorigin src="//unpkg.com/react@16/umd/react.development.js"></script>
+	<script crossorigin src="//unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 	<script src="dist/webapp.js"></script>
 	
 	<script>
