--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 		<canvas id="canvas"></canvas>
 		<textarea id="textarea" spellcheck="false"></textarea>
 		<div id="linenumbers"></div>
-		<div id="canvas-panner"></div>
+		<div id="canvas-panner">
+			<div canvas-tools></div>
+		</div>
 
 		<div id="reference" class="sidebar">
 			<div class="content">
@@ -256,37 +258,15 @@
 
 		<div id="linemarker"></div>
 
-		<div class="tools">
-			<a class="logo" href="javascript:void(0)" onclick="app.toggleSidebar('about')" title="About nomnoml"><h1>nomnoml</h1> &nbsp;</a>
-			<a href="javascript:void(0)" onclick="app.toggleSidebar('about')" title="About nomnoml">
-				<svg width="24" height="24" viewBox="0 0 24 24">
-					<path d="M14.2 16l.6-1c.8-1.7.9-3.3.2-4.6a4 4 0 0 0-.4-.7 4 4 0 1 0-5-1.6 6.7 6.7 0 0 0-3 1.4A2 2 0 0 0 7.9 13l-.6 1c-.8 1.7-.9 3.3-.2 4.6.5 1.2 1.6 2 3 2.3a6.3 6.3 0 0 0 5.3-1.4 2 2 0 0 0-1-3.5zM13 4a2 2 0 1 1 0 4 2 2 0 0 1 0-4zm-1.8 15h-.9C8.7 18.5 8 17 9 15l1-2c.5-1 .5-1.6-.1-2-.2-.2-.4-.2-.7-.2L8 11s1.1-1 2.8-1h.9c1.6.4 2.3 2 1.3 4l-1 2c-.5 1-.5 1.6.1 2 .2.2.4.2.7.2L14 18s-1.1 1-2.8 1z"/>
-				</svg>
-			</a>
-			<a href="javascript:void(0)" onclick="app.toggleSidebar('reference')" title="Language reference">
-				<svg version="1.2" width="24" height="24" viewBox="0 0 24 24">
-					<path d="M17 21H7a3 3 0 0 1-3-3V6a3 3 0 0 1 3-3h10a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3zM7 5a1 1 0 0 0-1 1v12c0 .6.4 1 1 1h10c.6 0 1-.4 1-1V6c0-.6-.4-1-1-1H7zm9 6H8a.5.5 0 0 1 0-1h8a.5.5 0 0 1 0 1zm0-3H8a.5.5 0 0 1 0-1h8a.5.5 0 0 1 0 1zm0 6H8a.5.5 0 0 1 0-1h8a.5.5 0 0 1 0 1zm0 3H8a.5.5 0 0 1 0-1h8a.5.5 0 0 1 0 1z"/>
-				</svg>
-			</a>
-			<a href="javascript:void(0)" onclick="app.toggleSidebar('export')" title="Export this diagram">
-				<svg version="1.2" baseProfile="tiny" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 21.312l-7.121-7.121c-1.17-1.17-1.17-3.073 0-4.242 1.094-1.094 2.978-1.138 4.121-.115v-4.834c0-1.654 1.346-3 3-3s3 1.346 3 3v4.834c1.143-1.023 3.027-.979 4.121.115 1.17 1.169 1.17 3.072 0 4.242l-7.121 7.121zm-5-10.242c-.268 0-.518.104-.707.293-.391.39-.391 1.023 0 1.414l5.707 5.707 5.707-5.707c.391-.391.391-1.024 0-1.414-.379-.379-1.035-.379-1.414 0l-3.293 3.293v-9.656c0-.551-.448-1-1-1s-1 .449-1 1v9.656l-3.293-3.293c-.189-.189-.439-.293-.707-.293z"/></svg>
-			</a>
-			<a href="javascript:void(0)" onclick="app.toggleSidebar('files')" title="Save this or load another diagram">
-				<svg version="1.2" width="24" height="24" viewBox="0 0 24 24">
-					<path d="M22.3 8h-2.4c-.4-1.2-1.5-2-2.8-2h-6c0-1.1-.9-2-2-2h-4.1c-1.7 0-3 1.3-3 3v10c0 1.7 1.3 3 3 3h12c1.7 0 3.4-1.3 3.8-3l2.2-8c.1-.6-.2-1-.7-1zm-18.3 1v-2c0-.6.4-1 1-1h4c0 1.1.9 2 2 2h6c.6 0 1 .4 1 1h-11.1c-.6 0-1.1.4-1.3 1l-1.6 6.3v-7.3zm14.9 7.5c-.2.8-1.1 1.5-1.9 1.5h-12s-.4-.2-.2-.8l1.9-7c0-.1.2-.2.3-.2h13.7l-1.8 6.5z"/>
-				</svg>
-			</a>
-			<a href="javascript:app.discardCurrentGraph()" title="Discard this diagram">
-				<svg width="24" height="24" viewBox="0 0 24 24">
-						<path d="M18 7h-1v-1c0-1.1-.8-2-2-2h-7c-1.1 0-2 .8-2 2v1h-1c-.5 0-1 .4-1 1s.4 1 1 1v8c0 2.2 1.7 4 4 4h5c2.2 0 4-1.7 4-4v-8c.5 0 1-.4 1-1s-.4-1-1-1zm-10-1h7v1h-7v-1zm8 11c0 1.1-.8 2-2 2h-5c-1.1 0-2-.8-2-2v-8h9v8zM8.5 10.5c-.2 0-.5.2-.5.5v6c0 .2.2.5.5.5s.5-.2.5-.5v-6c0-.2-.2-.5-.5-.5zM10.5 10.5c-.2 0-.5.2-.5.5v6c0 .2.2.5.5.5s.5-.2.5-.5v-6c0-.2-.2-.5-.5-.5zM12.5 10.5c-.2 0-.5.2-.5.5v6c0 .2.2.5.5.5s.5-.2.5-.5v-6c0-.2-.2-.5-.5-.5zM14.5 10.5c-.2 0-.5.2-.5.5v6c0 .2.2.5.5.5s.5-.2.5-.5v-6c0-.2-.2-.5-.5-.5z"/>
-				</svg>
-			</a>
-
-			<div id="tooltip"></div>
-			
-			<div storage-tools></div>
-
-			<div class="canvas-tools" id="canvas-tools"></div>
+		<div menu>
+			<div class="tools">
+				<a class="logo"><h1>nomnoml</h1> &nbsp;</a>
+				<a href="javascript:app.discardCurrentGraph()" title="Discard this diagram">
+					<svg width="24" height="24" viewBox="0 0 24 24">
+							<path d="M18 7h-1v-1c0-1.1-.8-2-2-2h-7c-1.1 0-2 .8-2 2v1h-1c-.5 0-1 .4-1 1s.4 1 1 1v8c0 2.2 1.7 4 4 4h5c2.2 0 4-1.7 4-4v-8c.5 0 1-.4 1-1s-.4-1-1-1zm-10-1h7v1h-7v-1zm8 11c0 1.1-.8 2-2 2h-5c-1.1 0-2-.8-2-2v-8h9v8zM8.5 10.5c-.2 0-.5.2-.5.5v6c0 .2.2.5.5.5s.5-.2.5-.5v-6c0-.2-.2-.5-.5-.5zM10.5 10.5c-.2 0-.5.2-.5.5v6c0 .2.2.5.5.5s.5-.2.5-.5v-6c0-.2-.2-.5-.5-.5zM12.5 10.5c-.2 0-.5.2-.5.5v6c0 .2.2.5.5.5s.5-.2.5-.5v-6c0-.2-.2-.5-.5-.5zM14.5 10.5c-.2 0-.5.2-.5.5v6c0 .2.2.5.5.5s.5-.2.5-.5v-6c0-.2-.2-.5-.5-.5z"/>
+					</svg>
+				</a>
+			</div>
 		</div>
 	</div>
 	
@@ -334,8 +314,8 @@
 		function render() {
 			ReactDOM.render(React.createElement(FileMenu, { app }), elem('[file-menu]'))
 			ReactDOM.render(React.createElement(ExportMenu, { app }), elem('[export-menu]'))
-			ReactDOM.render(React.createElement(StorageTools, { app }), elem('[storage-tools]'))
-			ReactDOM.render(React.createElement(CanvasTools, { app }), elem('#canvas-tools'))
+			ReactDOM.render(React.createElement(Menu, { app }), elem('[menu]'))
+			ReactDOM.render(React.createElement(CanvasTools, { app }), elem('[canvas-tools]'))
 		}
 		
 		app.signals.on('source-changed', render)
