--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 				[&lt;table&gt; name| a|5 || b|7]<br>
 
 				<h2>Directives</h2>
+				#import: filename<br>
 				#arrowSize: 1<br>
 				#bendSize: 0.3<br>
 				#direction: down | right<br>
@@ -245,6 +246,11 @@
 				<h3>Create your own styles</h3>
 				<pre>#.box: fill=#8f8 dashed
 [&lt;box&gt; GreenBox]</pre>
+
+				<h3>Divide into mupltiple files</h3>
+				<pre>#import: boxy_styles
+[&lt;box&gt; GreenBox]
+</pre>
 			</div>
 		</div>
 
