--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@
 	<script src="codemirror/nomnoml.codemirror-mode.js"></script>
 	<script src="dist/nomnoml.web.js"></script>
 
-	<script crossorigin src="//unpkg.com/react@16/umd/react.development.js"></script>
-	<script crossorigin src="//unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+	<script crossorigin src="//unpkg.com/react@16/umd/react.production.min.js"></script>
+	<script crossorigin src="//unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
 	<script src="dist/webapp.js"></script>
 	
 	<script>
