fix bug in #background directive

--- a/test/index.html
+++ b/test/index.html
@@ -178,9 +178,12 @@
   </div>
 
   <div class=testcase>
-    <h1>Edge label linebreak</h1>
+    <h1>Edge linebreak, background</h1>
     <div nomnoml=canvas>
       <script type="text/vnd.nomnoml">
+#background: #aaa
+#stroke: #eee8d5
+#fill: #aaa
 [Left] left`association <-> right`association [Right]
       </script>
     </div>
