--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <link rel="stylesheet" href="codemirror/solarized.nomnoml.css">
 <link rel="stylesheet" href="nomnoml.css?v=1">
 <link rel="shortcut icon" href="favicon.png">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://www.nomnoml.com">
+<meta property="og:title" content="Nomnoml">
+<meta property="og:description" content="A tool for drawing diagrams based on syntax. Supercharge you boxes and arrows.">
+<meta property="og:image" content="https://www.nomnoml.com/img/example.png">
 </head>
 <body>
 	<div class="wrap">
