#gravity directive and weightless edges with "_>"

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 				<b>aggregation</b> o-&gt;<br>
 				<b>note</b> --<br>
 				<b>hidden</b> -/-<br>
+				<b>weightless edge</b> _><br>
+				<b>weightless dashed</b> __<br>
 
 				<h2>Classifier types</h2>
 				[name]<br>
@@ -73,6 +75,7 @@
 				#direction: down | right<br>
 				#gutter: 5<br>
 				#edgeMargin: 0<br>
+				#gravity: 1<br>
 				#edges: hard | rounded<br>
 				#background: transparent<br>
 				#fill: #eee8d5; #fdf6e3<br>
