--- a/test/index.html
+++ b/test/index.html
@@ -178,6 +178,18 @@
   </div>
 
   <div class=testcase>
+    <h1>Gravity config</h1>
+    <div nomnoml=canvas>
+      <script type="text/vnd.nomnoml">
+#gravity: 2
+[a] -> [b]
+[a] _> [c]
+[c] -> [d]
+      </script>
+    </div>
+  </div>
+
+  <div class=testcase>
     <h1>Edge linebreak, background</h1>
     <div nomnoml=canvas>
       <script type="text/vnd.nomnoml">
