--- a/test/index.html
+++ b/test/index.html
@@ -298,7 +298,8 @@
   <div id=testreport></div>
 
 
-  <script src="../dist/nomnoml.web.js"></script>
+  <script src="../node_modules/graphre/dist/graphre.js"></script>
+  <script src="../dist/nomnoml.js"></script>
   <script>
     function require(id) {
       return {
