--- a/test/standalone.usecase.html
+++ b/test/standalone.usecase.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>test nomnoml</title>
   <link rel="shortcut icon" type="image/png" href="favicon.png">
-  <script src="//unpkg.com/dagre@0.8.5/dist/dagre.min.js"></script>
+  <script src="//unpkg.com/graphre@0.1.2/dist/graphre.js"></script>
   <script src="../dist/nomnoml.js"></script>
 </head>
 <body>
