--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@ Text with serifs
 	<script src="codemirror/codemirror-compressed.js"></script>
 	<script src="codemirror/nomnoml.codemirror-mode.js"></script>
 
-	<script crossorigin src="//unpkg.com/react@17/umd/react.production.min.js"></script>
-	<script crossorigin src="//unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
+	<script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
+	<script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
 	<script src="dist/webapp.js"></script>
 	
 	<script>
