new SYNC type for forks and joins in flow charts

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 				[&lt;end&gt; name]<br>
 				[&lt;state&gt; name]<br>
 				[&lt;choice&gt; name]<br>
+				[&lt;sync&gt; name]<br>
 				[&lt;input&gt; name]<br>
 				[&lt;sender&gt; name]<br>
 				[&lt;receiver&gt; name]<br>
@@ -131,6 +132,7 @@
 				visual=roundrect<br>
 				visual=sender<br>
 				visual=start<br>
+				visual=sync<br>
 				visual=table<br>
 				visual=transceiver<br>
 
