show preview of all classifier types

--- a/index.html
+++ b/index.html
@@ -46,28 +46,28 @@
 				<b>weightless dashed</b> __<br>
 
 				<h2>Classifier types</h2>
-				[name]<br>
-				[&lt;abstract&gt; name]<br>
-				[&lt;instance&gt; name]<br>
-				[&lt;note&gt; name]<br>
-				[&lt;reference&gt; name]<br>
-				[&lt;package&gt; name]<br>
-				[&lt;frame&gt; name]<br>
-				[&lt;database&gt; name]<br>
-				[&lt;start&gt; name]<br>
-				[&lt;end&gt; name]<br>
-				[&lt;state&gt; name]<br>
-				[&lt;choice&gt; name]<br>
-				[&lt;sync&gt; name]<br>
-				[&lt;input&gt; name]<br>
-				[&lt;sender&gt; name]<br>
-				[&lt;receiver&gt; name]<br>
-				[&lt;transceiver&gt; name]<br>
-				[&lt;actor&gt; name]<br>
-				[&lt;usecase&gt; name]<br>
-				[&lt;label&gt; name]<br>
-				[&lt;hidden&gt; name]<br>
-				[&lt;table&gt; name| a|5 || b|7]<br>
+				<pre append-nomnoml-preview>[class]</pre>
+				<pre append-nomnoml-preview>[&lt;abstract&gt; abstract]</pre>
+				<pre append-nomnoml-preview>[&lt;instance&gt; instance]</pre>
+				<pre append-nomnoml-preview>[&lt;note&gt; note]</pre>
+				<pre append-nomnoml-preview>[&lt;reference&gt; reference]</pre>
+				<pre append-nomnoml-preview>[&lt;package&gt; package|components]</pre>
+				<pre append-nomnoml-preview>[&lt;frame&gt; frame|]</pre>
+				<pre append-nomnoml-preview>[&lt;database&gt; database]</pre>
+				<pre append-nomnoml-preview>[&lt;start&gt; start]</pre>
+				<pre append-nomnoml-preview>[&lt;end&gt; end]</pre>
+				<pre append-nomnoml-preview>[&lt;state&gt; state]</pre>
+				<pre append-nomnoml-preview>[&lt;choice&gt; choice]</pre>
+				<pre append-nomnoml-preview>[&lt;sync&gt; sync]</pre>
+				<pre append-nomnoml-preview>[&lt;input&gt; input]</pre>
+				<pre append-nomnoml-preview>[&lt;sender&gt; sender]</pre>
+				<pre append-nomnoml-preview>[&lt;receiver&gt; receiver]</pre>
+				<pre append-nomnoml-preview>[&lt;transceiver&gt; transceiver]</pre>
+				<pre append-nomnoml-preview>[&lt;actor&gt; actor]</pre>
+				<pre append-nomnoml-preview>[&lt;usecase&gt; usecase]</pre>
+				<pre append-nomnoml-preview>[&lt;label&gt; label]</pre>
+				<pre append-nomnoml-preview>[&lt;hidden&gt; hidden]</pre>
+				<pre append-nomnoml-preview>[&lt;table&gt; table| a | 5 || b | 7]</pre>
 
 				<h2>Directives</h2>
 				#import: filename<br>
