--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@ Text with serifs
 
 	<script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
 	<script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
+	<script crossorigin src="https://unpkg.com/jszip@3.5.0/dist/jszip.min.js"></script>
 	<script src="dist/webapp.js"></script>
 	
 	<script>
