--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
 				<b>weightless edge</b> _><br>
 				<b>weightless dashed</b> __<br>
 
-				<h2>Classifier types</h2>
+				<h2>Class diagram types</h2>
 				<pre append-nomnoml-preview>[class]</pre>
 				<pre append-nomnoml-preview>[&lt;abstract&gt; abstract]</pre>
 				<pre append-nomnoml-preview>[&lt;instance&gt; instance]</pre>
-				<pre append-nomnoml-preview>[&lt;note&gt; note]</pre>
 				<pre append-nomnoml-preview>[&lt;reference&gt; reference]</pre>
 				<pre append-nomnoml-preview>[&lt;package&gt; package|components]</pre>
 				<pre append-nomnoml-preview>[&lt;frame&gt; frame|]</pre>
-				<pre append-nomnoml-preview>[&lt;database&gt; database]</pre>
+
+				<h2>Flow chart types</h2>
 				<pre append-nomnoml-preview>[&lt;start&gt; start]</pre>
 				<pre append-nomnoml-preview>[&lt;end&gt; end]</pre>
 				<pre append-nomnoml-preview>[&lt;state&gt; state]</pre>
@@ -63,10 +63,16 @@
 				<pre append-nomnoml-preview>[&lt;sender&gt; sender]</pre>
 				<pre append-nomnoml-preview>[&lt;receiver&gt; receiver]</pre>
 				<pre append-nomnoml-preview>[&lt;transceiver&gt; transceiver]</pre>
+				
+				<h2>Use case types</h2>
 				<pre append-nomnoml-preview>[&lt;actor&gt; actor]</pre>
 				<pre append-nomnoml-preview>[&lt;usecase&gt; usecase]</pre>
+				
+				<h2>Miscalleneous types</h2>
+				<pre append-nomnoml-preview>[&lt;note&gt; note]</pre>
 				<pre append-nomnoml-preview>[&lt;label&gt; label]</pre>
 				<pre append-nomnoml-preview>[&lt;hidden&gt; hidden]</pre>
+				<pre append-nomnoml-preview>[&lt;database&gt; database]</pre>
 				<pre append-nomnoml-preview>[&lt;table&gt; table| a | 5 || b | 7]</pre>
 
 				<h2>Directives</h2>
