"ball and socket" required and provided interface relations

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 				<b>composition</b> +-&gt;<br>
 				<b>aggregation</b> o-<br>
 				<b>aggregation</b> o-&gt;<br>
+				<b>ball and socket</b> -o)<br>
+				<b>ball and socket</b> o&lt;-)<br>
+				<b>ball and socket</b> -&gt;o<br>
 				<b>note</b> --<br>
 				<b>hidden</b> -/-<br>
 				<b>weightless edge</b> _><br>
