--- a/test/index.html
+++ b/test/index.html
@@ -102,6 +102,7 @@
 [start] -/- [<usecase> usecase]
 [<end> end] -/- [<state> state]
 [state] - [<actor> actor|subtitle]
+[<lollipop>lollipop] - [<socket>socket]
 [<choice> choice] - [<sync>sync]
 [sync] - [<input> input]
 [<sender> sender] <-+ [<receiver> receiver]
