fix code style, and build dist bundle

--- a/test/index.html
+++ b/test/index.html
@@ -213,7 +213,7 @@
 
   <div class=testcase>
     <h1>Associations</h1>
-    <div nomnoml=canvas>
+    <div nomnoml=svg>
       <script type="text/vnd.nomnoml">
 #direction: right
 [a] --> [depend]
