--- a/test/index.html
+++ b/test/index.html
@@ -397,6 +397,9 @@
   <script src="test.misc.js"></script>
   <script src="test.parser.js"></script>
   <script src="test.layout.js"></script>
+  <script src="test.parse-nodes.js"></script>
+  <script src="test.parse-relations.js"></script>
+  <script src="test.parse-directives.js"></script>
 
   <script>
     function mountNomnoml() {
