switch between new and legacy parser

--- a/index.html
+++ b/index.html
@@ -258,8 +258,10 @@ Text with serifs
 		</div>
 	</div>
 	
-	<div class=alert-list daily-tip>
+	<div class="alert-list persistent" parser-config>
 	</div>
+	
+	<!--div class=alert-list daily-tip></div-->
 
 	<script type="text/vnd.nomnoml.class" id="defaultGraph">[Pirate|eyeCount: Int|raid();pillage()|
   [beard]--[parrot]
