pipe node style

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 				<pre append-nomnoml-preview>[&lt;label&gt; label]</pre>
 				<pre append-nomnoml-preview>[&lt;hidden&gt; hidden]</pre>
 				<pre append-nomnoml-preview>[&lt;database&gt; database]</pre>
+				<pre append-nomnoml-preview>[&lt;pipe&gt; pipe]</pre>
 				<pre append-nomnoml-preview>[&lt;table&gt; table| a | 5 || b | 7]</pre>
 
 				<h2>Directives</h2>
