highlight errors, require correctly closed diagram

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 				visual=none<br>
 				visual=note<br>
 				visual=package<br>
+				visual=pipe<br>
 				visual=receiver<br>
 				visual=rhomb<br>
 				visual=roundrect<br>
@@ -244,8 +245,6 @@ Text with serifs
 		<div id="files" class="sidebar">
 			<div class="content" file-menu></div>
 		</div>
-
-		<div id="linemarker"></div>
 
 		<div menu>
 			<div class="tools">
