comments only supported at the start of a line

--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
 				<pre append-nomnoml-preview>[&lt;pipe&gt; pipe]</pre>
 				<pre append-nomnoml-preview>[&lt;table&gt; table| a | 5 || b | 7]</pre>
 
+				<h2>Comments</h2>
+				Comments are supported at the start of a line
+				<pre append-nomnoml-preview>//[commented]
+[not //commented]</pre>
+				
 				<h2>Directives</h2>
 				#import: filename<br>
 				#arrowSize: 1<br>
