--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
 				Comments are supported at the start of a line
 				<pre append-nomnoml-preview>//[commented]
 [not //commented]</pre>
+
+				<h2>Id attribute</h2>
+				Two distinct nodes can have the same display name with the id attribute.
+				<pre append-nomnoml-preview>[&lt;actor id=a&gt;User]
+[&lt;actor id=b&gt;User]
+[a] -- [b]</pre>
 				
 				<h2>Directives</h2>
 				#import: filename<br>
@@ -260,10 +266,7 @@ Text with serifs
 			</div>
 		</div>
 	</div>
-	
-	<div class="alert-list persistent" parser-config>
-	</div>
-	
+		
 	<!--div class=alert-list daily-tip></div-->
 
 	<script type="text/vnd.nomnoml.class" id="defaultGraph">[<start>start] -> [<state>plunder] -> [<choice>more loot] -> [start]
