--- a/index.html
+++ b/index.html
@@ -290,9 +290,9 @@ Text with serifs
 	<script src="codemirror/codemirror-compressed.js"></script>
 	<script src="codemirror/nomnoml.codemirror-mode.js"></script>
 
-	<script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
-	<script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
-	<script crossorigin src="https://unpkg.com/jszip@3.5.0/dist/jszip.min.js"></script>
+	<script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react/17.0.2/umd/react.production.min.js"></script>
+	<script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/17.0.2/umd/react-dom.production.min.js"></script>
+	<script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
 	<script src="dist/webapp.js"></script>
 	
 	<script>
